blog like button, gotta fix footer
I made the blog like button work (i need to save it in MongoDB so people can only like once and the amount is the same for every user). Realized the footer is broken on most if not every page, so i have to redesign it. preferably from scratch so i can fully understand it.

--- a/zombie apocalypse club 2/styles/blog.styles.css
+++ b/zombie apocalypse club 2/styles/blog.styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -27,7 +27,7 @@ a:link {
   outline: none !important;
 }
 .button{
-  background-color: rgba(45,67,106, 0.9);
+  background-color: #a00603;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   border: none;
   border-radius: 4px;
@@ -36,6 +36,7 @@ a:link {
   padding: 0.3em;
   font-size: 18px;
   text-align: center;
+  max-width: fit-content;
 }
 .button:hover{
   transform: scale(1.02);
@@ -60,7 +61,7 @@ a:link {
   margin-bottom:0;
 }
 .footer-basic li {
-  padding:0 10px;
+  padding:0 2px;
 }
 .footer-basic ul a {
   color:inherit;
@@ -80,16 +81,64 @@ a:link {
 
 /* Styles for every page ^^ */
 
-.everything{
-  padding: 0em 2em 0em 2em;
-}
-.indent{
-  margin-left: 1em;
+body{
+  position: relative;
+  min-height: 100vh;
 }
 
-.about{
-  color: black;
-  font-size: 1.8em; /* 3 for computers */
-  text-align: left;
-  margin-top: 1em;
+.blogs-container{
+  margin: 1em;
+  color: white;
+}
+
+.blog{
+  border: 5px solid #a00603;
+  margin-bottom: 2em;
+  padding: 1em;
+  background-color: #2D436A;
+  border-radius: 24px;
+}
+h1{
+  margin: 0;
+}
+h4{
+  margin: 0;
+}
+p{
+  margin: 0;
+}
+
+.teaser-container{
+  background: #a00603;
+  padding: 5px;
+  border-radius: 4px;
+}
+.blog-teaser{
+  font-size: 18px;
+}
+.blog-author, .blog-date{
+  color: #808080;
+}
+.likes-comments-container{
+  margin-bottom: 0.5em;
+  margin-left: 0.5em;
+}
+.blog-comments{
+  float: right;
+}
+
+.blog-likes{
+  display: inline;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  max-width: fit-content;
+  padding-top: 0.3em;
+  padding-bottom: .3em;
+  color: white;
+}
+.blog-dislikes{
+  display: inline;
+  margin-left: .5em;
 }
