--- a/zombie apocalypse club 2/styles/thanks.styles.css
+++ b/zombie apocalypse club 2/styles/thanks.styles.css
@@ -26,7 +26,7 @@ a:link {
   border: none !important;
   outline: none !important;
 }
-.button{
+button{
   background-color: rgba(45,67,106, 0.9);
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   border: none;
@@ -37,7 +37,7 @@ a:link {
   font-size: 18px;
   text-align: center;
 }
-.button:hover{
+button:hover{
   transform: scale(1.02);
 }
 /* Footer styles (still for every page) */
@@ -46,10 +46,7 @@ a:link {
   padding:40px 0;
   background-color:#cdc8cb;
   color:#4b4c4d;
-  bottom: 0;
-  margin-top: 5em;
-  position: absolute;
-  width: 100%;
+  
 }
 .footer-basic ul {
   padding:0;
@@ -80,16 +77,40 @@ a:link {
 
 /* Styles for every page ^^ */
 
-.everything{
-  padding: 0em 2em 0em 2em;
-}
-.indent{
-  margin-left: 1em;
+.container{
+  display: grid;
+  place-items: center;
 }
 
-.about{
-  color: black;
-  font-size: 1.8em; /* 3 for computers */
-  text-align: left;
-  margin-top: 1em;
+.thankyou{
+  text-align: center;
+  margin-top: 2em;
+  color: rgb(192,30,59);
+  margin-bottom: 2em;
+}
+
+.email{
+  text-align: center;
+  margin-bottom: 1em;
+}
+.spam{
+  text-align: center;
+  margin-bottom: 1em;
+}
+.home{
+  margin-bottom: 10.3em;
+}
+
+.hearts{
+  font-size: 23px;
+  font-weight: bold;
+  position: fixed;
+  top: -4vh;
+  left: 0;
+  animation: fall 3s ease-in;
+}
+@keyframes fall {
+  to{
+    transform: translateY(250vh);
+  }
 }
